force-app/main/default/objects/OLI_add_on__c/OLI_add_on__c.object-meta.xml
<CustomObject>
    <label>OLI add-on</label>
    <nameField>
        <label>OLI add-on Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>OLI add-on</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>