force-app/main/default/objects/OLI_add_on__c/fields/Deduction_Amount__c.field-meta.xml
<CustomField>
    <fullName>Deduction_Amount__c</fullName>
    <label>Deduction Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>