force-app/main/default/objects/OLI_add_on__c/fields/Order_Line_Items__c.field-meta.xml
<CustomField>
    <fullName>Order_Line_Items__c</fullName>
    <label>Order Line Items</label>
    <referenceTo>Order_Line_Items__c</referenceTo>
    <relationshipLabel>OLI add-on</relationshipLabel>
    <relationshipName>OLI_add_on</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>