force-app/main/default/objects/OLI_add_on__c/fields/Passenger_Name__c.field-meta.xml
<CustomField>
    <fullName>Passenger_Name__c</fullName>
    <label>Passenger Name</label>
    <length>18</length>
    <type>Text</type>
</CustomField>