force-app/main/default/objects/OLI_add_on__c/fields/Refund_Status__c.field-meta.xml
<CustomField>
    <fullName>Refund_Status__c</fullName>
    <label>Refund Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Submit for Approval</fullName>
            </value>
            <value>
                <fullName>Pending Documentation</fullName>
            </value>
            <value>
                <fullName>Refund Approval - no Processed</fullName>
            </value>
            <value>
                <fullName>Refund Rejected</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>