force-app/main/default/objects/OLI_add_on__c/fields/Trip_Security_Device__c.field-meta.xml
<CustomField>
    <fullName>Trip_Security_Device__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Trip Security Device</label>
    <type>Checkbox</type>
</CustomField>