force-app/main/default/objects/OLI_add_on__c/recordTypes/Trip_Upgrade.recordType-meta.xml
<RecordType>
    <fullName>Trip_Upgrade</fullName>
    <active>true</active>
    <label>Trip Upgrade</label>
</RecordType>